Atualização do manifesto e do script de fundo para alterar o domínio da extensão de 'www.google.com' para 'example.com'. Ajustes na formatação de strings e mensagens de log para maior consistência.

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://www.google.com/*"],
+      "matches": ["*://example.com/*"],
       "js": ["src/utils.js", "src/overlay.js"],
       "run_at": "document_end"
     }
@@ -20,7 +20,7 @@
   "web_accessible_resources": [
     {
       "resources": ["templates/overlay.html", "templates/overlay.css"],
-      "matches": ["*://www.google.com/*"]
+      "matches": ["*://example.com/*"]
     }
   ]
 }
